--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+dist
 
 # Created by https://www.gitignore.io/api/osx,node
 
@@ -7,7 +8,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
